css/style.css
/* ... */
.wordcloud {
  height: 45vw;
  margin: 0.5vw auto;
  padding: 0;
  page-break-after: always;
  page-break-inside: avoid;
  width: auto;
  z-index: 1;
}

/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
  background-color: transparent;
  width: 100vw;
  height: 400px;
  perspective: 1000px; /* Remove this if you don't want the 3D effect */
  margin: 2px 2px;
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
  /* background-image: linear-gradient(white, #3e64ff);
  background: filter(url(../images/about.jpg), blur(8px)); */
  background-size: cover;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front > h2 {
  color: white;
}

/* Position the front and back side */
.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
  vertical-align: middle;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: scroll;
}

/* Style the back side */
.flip-card-back {
  /* color: white; */
  align-items:start;
  transform: rotateY(180deg);
  white-space: pre-line;
  color: rgb(57, 116, 226);
  background-color: white;
}

.flex-about-section {
  display: flex !important;
  flex-direction: row;
}

@media (max-width: 1000px) {
  .flex-about-section {
    flex-direction: column !important;
  }
  #about-image {
    height: 500px !important;
    flex: none;
    max-width: 100%;
  }
  #about-content {
    flex: none;
    max-width: 100%;
  }
}

.experience-skills {
  margin-top: 15px;
}

.experience-skills > span {
  border-radius: 10px;
  padding: 5px;
  color: white;
  background-color: #3e64ff;
  font-size: small;
}
.cp-problem {
  opacity: 0;
  background-color: #3e64ff;
  color: white;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  text-align: center;
  display: flex;
  padding: 20px;
  opacity: 0;
}

.cp-problem:hover {
  transition: 2s;
  opacity: 1;
}

.icon iconify-icon {
  color: white;
  font-size: x-large;
}

